recipes/nvidia-gpu/manifests/2000-state-runtime.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: specialresource-runtime-enablement-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
  name: specialresource-runtime-enablement-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
  namespace: openshift-sro
  annotations:
    specialresource.openshift.io/state: "runtime-enablement"
    specialresource.openshift.io/wait: "true"
    specialresource.openshift.io/inject-runtime-info: "true"
spec:
  selector:
    matchLabels:
      app: specialresource-runtime-enablement-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
  template:
    metadata:
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ""
      labels:
        app: specialresource-runtime-enablement-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: specialresource.openshift.io/driver-container-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
                operator: In 
                values:
                - ready 
      containers:
      - image: nvidia/container-toolkit:1.0.0-alpha.3
        command: ["/bin/entrypoint.sh"]
        imagePullPolicy: IfNotPresent
        name: specialresource-runtime-enablement-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE-ctr
        resources: {}
        securityContext:
          privileged: true
          seLinuxOptions:
            level: s0
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: entrypoint
          mountPath: /bin/entrypoint.sh
          readOnly: true
          subPath: entrypoint.sh
        - mountPath: /var/run/docker.sock
          name: docker-socket
        - mountPath: /run/nvidia
          mountPropagation: Bidirectional
          name: nvidia-install-path
        - mountPath: /etc/docker
          name: docker-config
        - mountPath: /usr/local/nvidia
          name: nvidia-local
        - mountPath: /usr/share/containers/oci/hooks.d
          name: crio-hooks
      hostPID: true
      nodeSelector:
        SPECIALRESOURCE.OPENSHIFT.IO.NODEFEATURE: "true"
      restartPolicy: Always
      securityContext: {}
      serviceAccount: specialresource-runtime-enablement-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
      serviceAccountName: specialresource-runtime-enablement-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
      tolerations:
      - key: CriticalAddonsOnly
        operator: Exists
      - effect: NoSchedule
        key: nvidia.com/gpu
        operator: Exists
      volumes:
      - name: entrypoint
        configMap:
          defaultMode: 0700
          name: specialresource-runtime-enablement-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE-entrypoint
      - name: init-entrypoint
        configMap:
          defaultMode: 0700
          name: specialresource-runtime-enablement-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE-init-entrypoint
      - hostPath:
          path: /var/run/docker.sock
          type: ""
        name: docker-socket
      - hostPath:
          path: /run/nvidia
          type: ""
        name: nvidia-install-path
      - hostPath:
          path: /etc/docker
          type: ""
        name: docker-config
      - hostPath:
          path: /usr/local/nvidia
          type: ""
        name: nvidia-local
      - hostPath:
          path: /etc/containers/oci/hooks.d
          type: ""
        name: crio-hooks
