recipes/nvidia-gpu/manifests/4000-state-device-plugin.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: specialresource-device-plugin-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
  name: specialresource-device-plugin-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
  namespace: openshift-sro
  annotations:
    openshift.io/scc: hostmount-anyuid
    specialresource.openshift.io/state: "device-plugin"
    specialresource.openshift.io/wait: "true"
spec:
  selector:
    matchLabels:
      app: specialresource-device-plugin-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
  template:
    metadata:
      # Mark this pod as a critical add-on; when enabled, the critical add-on scheduler
      # reserves resources for critical add-on pods so that they can be rescheduled after
      # a failure.  This annotation works in tandem with the toleration below.
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ""
      labels:
        app: specialresource-device-plugin-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: specialresource.openshift.io/runtime-enablement-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
                operator: In 
                values:
                - ready 
      tolerations:
      - operator: Exists
      # Allow this pod to be rescheduled while the node is in "critical add-ons only" mode.
      # This, along with the annotation above marks this pod as a critical add-on.
      - key: CriticalAddonsOnly
        operator: Exists
      - key: nvidia.com/gpu
        operator: Exists
        effect: NoSchedule
      serviceAccount: specialresource-device-plugin-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
      containers:
      - image: nvidia/k8s-device-plugin:1.11 
        name: specialresource-device-plugin-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE-ctr
        securityContext:
          privileged: true
        volumeMounts:
          - name: device-plugin-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
            mountPath: /var/lib/kubelet/device-plugins
      volumes:
        - name: device-plugin-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
          hostPath:
            path: /var/lib/kubelet/device-plugins
        - name: init-entrypoint
          configMap:
            defaultMode: 0700
            name: specialresource-driver-validation-entrypoint-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE

      nodeSelector:
        node-role.kubernetes.io/worker: ""
        SPECIALRESOURCE.OPENSHIFT.IO.NODEFEATURE: "true"
