recipes/nvidia-gpu/manifests/6000-state-device-monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: openshift-sro
  name: specialresource-metrics-exporter-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
  labels:
    app: specialresource-metrics-exporter-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
spec:
  selector:
    app: specialresource-metrics-exporter-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
  type: ClusterIP
  ports:
  - name: dcgm
    port: 9600
    targetPort: 9600
    protocol: TCP
---
# Node exporter collecting only GPU metrics from dcgm-exporter.
# Except textfile collector, all other collectors that are enabled by default are disabled.
# Refer: https://github.com/prometheus/node_exporter/tree/release-0.16
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels: 
    app: specialresource-metrics-exporter-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
  name: specialresource-metrics-exporter-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
  namespace: openshift-sro
  annotations: 
    specialresource.openshift.io/state: "device-monitoring"
    specialresource.openshift.io/wait: "true"
spec:
  selector:
    matchLabels:
      app: specialresource-metrics-exporter-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
  template:
    metadata:
      labels:
        app: specialresource-metrics-exporter-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
      name: specialresource-metrics-exporter-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: specialresource.openshift.io/device-plugin-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
                operator: In 
                values:
                - ready 
      tolerations:
      - operator: Exists
      - key: nvidia.com/gpu
        operator: Exists
        effect: NoSchedule
      serviceAccount: specialresource-metrics-exporter-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
      serviceAccountName: specialresource-metrics-exporter-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
      containers:
      - image: quay.io/prometheus/node-exporter:v0.16.0
        name: node-exporter
        args:
        - "--web.listen-address=0.0.0.0:9600"
        - "--path.procfs=/host/proc"
        - "--path.sysfs=/host/sys"
        - "--collector.textfile.directory=/run/prometheus"
        - "--no-collector.arp"
        - "--no-collector.bcache"
        - "--no-collector.bonding"
        - "--no-collector.conntrack"
        - "--no-collector.cpu"
        - "--no-collector.diskstats"
        - "--no-collector.edac"
        - "--no-collector.entropy"
        - "--no-collector.filefd"
        - "--no-collector.filesystem"
        - "--no-collector.hwmon"
        - "--no-collector.infiniband"
        - "--no-collector.ipvs"
        - "--no-collector.loadavg"
        - "--no-collector.mdadm"
        - "--no-collector.meminfo"
        - "--no-collector.netdev"
        - "--no-collector.netstat"
        - "--no-collector.nfs"
        - "--no-collector.nfsd"
        - "--no-collector.sockstat"
        - "--no-collector.stat"
        - "--no-collector.time"
        - "--no-collector.timex"
        - "--no-collector.uname"
        - "--no-collector.vmstat"
        - "--no-collector.wifi"
        - "--no-collector.xfs"
        - "--no-collector.zfs"
        ports:
        - name: metrics
          containerPort: 9600
          hostPort: 9600
        resources:
          requests:
            memory: 30Mi
            cpu: 100m
          limits:
            memory: 50Mi
            cpu: 200m
        volumeMounts:
        - name: proc
          readOnly:  true
          mountPath: /host/proc
        - name: sys
          readOnly: true
          mountPath: /host/sys
        - name: collector-textfiles
          readOnly: true
          mountPath: /run/prometheus
      - image: nvidia/dcgm-exporter:1.4.6
        name: specialresource-metrics-exporter-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
        securityContext:
          runAsNonRoot: false
          runAsUser: 0
        volumeMounts:
        - name: collector-textfiles
          mountPath: /run/prometheus

      hostNetwork: true
      hostPID: true

      volumes:
      - name: proc
        hostPath:
          path: /proc
      - name: sys
        hostPath:
          path: /sys
      - name: collector-textfiles
        emptyDir:
          medium: Memory
      - name: init-entrypoint
        configMap:
          defaultMode: 0700
          name: specialresource-device-plugin-validation-entrypoint-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE

      nodeSelector:
        node-role.kubernetes.io/worker: ""
        SPECIALRESOURCE.OPENSHIFT.IO.NODEFEATURE: "true"
