recipes/nvidia-gpu/manifests/7000-state-device-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: specialresource-grafana-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
  namespace: openshift-sro
  labels:
    metrics-infra: specialresource-grafana-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
    name: specialresource-grafana-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
spec:
  ports:
  - name: specialresource-grafana-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: specialresource-grafana-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: specialresource-grafana-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
  namespace: openshift-sro
spec:
  host: ""
  to:
    kind: Service
    name: specialresource-grafana-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
    weight: 100
  port:
    targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: specialresource-grafana-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
  name: specialresource-grafana-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
  namespace: openshift-sro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: specialresource-grafana-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
  template:
    metadata:
      labels:
        app: specialresource-grafana-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
      name: specialresource-grafana-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: specialresource.openshift.io/device-monitoring-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
                operator: In 
                values:
                - ready 
      containers:
      - name: specialresource-grafana-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
        image: docker.io/grafana/grafana:master
        ports:
        - name: sc-grafana-http
          containerPort: 3000
        volumeMounts:
        - mountPath: /etc/grafana/provisioning/datasources
          name: specialresource-grafana-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
        - mountPath: /etc/grafana/provisioning/dashboards
          name: specialresource-grafana-dashboards-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE

        - mountPath: /grafana-dashboard-definitions/0/gpu
          name: specialresource-grafana-dashboard-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
          readOnly: false

      volumes:
      - name: specialresource-grafana-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
        configMap:
          name: specialresource-grafana-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
      - name: specialresource-grafana-dashboards-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
        configMap:
          name: specialresource-grafana-dashboards-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
      - name: specialresource-grafana-dashboard-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
        configMap:
          name: specialresource-grafana-dashboard-SPECIALRESOURCE.OPENSHIFT.IO.HARDWARE
